# DiskScheduling

./: CMakeLists.txt  Disk.cpp  Disk.h  DiskFCFS.cpp  DiskFCFS.h  DiskSCAN.cpp  DiskSCAN.h  DiskSSFT.cpp  DiskSSFT.h  DiskSSTF.cpp  DiskSSTF.h  Menu.cpp  Menu.h  README.md  main.cpp
